--- a/Water.csproj
+++ b/Water.csproj
@@ -34,11 +34,11 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
-    <None Include="API Package.zip" />
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\WaterModAPIBackend.cs" />
     <Compile Include="API\WaterModAPI.cs" />
     <Compile Include="Components\WaterVentComponent.cs" />
     <Compile Include="Effects\COBIndicator.cs" />
@@ -53,10 +53,10 @@
     <Compile Include="Effects\Splash.cs" />
     <Compile Include="Creatures\Seagull.cs" />
     <Compile Include="Effects\Wake.cs" />
-    <Compile Include="API\Water.cs" />
+    <Compile Include="Water.cs" />
     <Compile Include="Components\WaterSolarComponent.cs" />
     <Compile Include="TSSDepth.cs" />
-    <Compile Include="API\FastNoiseLite.cs" />
+    <Compile Include="FastNoiseLite.cs" />
     <Compile Include="Utils\Quadtree.cs" />
     <Compile Include="WaterData.cs" />
     <Compile Include="WaterFace.cs" />
