--- a/Water.csproj
+++ b/Water.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="API\WaterModAPIBackend.cs" />
     <Compile Include="API\WaterModAPI.cs" />
+    <Compile Include="Components\WaterWheelComponent.cs" />
     <Compile Include="Components\WaterVentComponent.cs" />
     <Compile Include="Effects\COBIndicator.cs" />
     <Compile Include="Components\WaterFarmComponent.cs" />
