--- a/Water.csproj
+++ b/Water.csproj
@@ -42,27 +42,36 @@
     <Compile Include="API\WaterModAPIBackend.cs" />
     <Compile Include="API\WaterModAPI.cs" />
     <Compile Include="API\WeaponCoreApi.cs" />
-    <Compile Include="Components\WaterWheelComponent.cs" />
-    <Compile Include="Components\WaterVentComponent.cs" />
-    <Compile Include="Effects\COBIndicator.cs" />
-    <Compile Include="Components\WaterFarmComponent.cs" />
-    <Compile Include="DragClientAPI.cs" />
-    <Compile Include="Creatures\Fish.cs" />
-    <Compile Include="Effects\GodRay.cs" />
-    <Compile Include="Effects\SimulatedSplash.cs" />
-    <Compile Include="FastNoiseLite.cs" />
-    <Compile Include="FatBlockStorage.cs" />
-    <Compile Include="HudAPIv2.cs" />
-    <Compile Include="Language.cs" />
-    <Compile Include="Effects\SmallBubble.cs" />
-    <Compile Include="Effects\Bubble.cs" />
-    <Compile Include="Effects\Splash.cs" />
+    <Compile Include="Components\WaterPhysicsComponentFloatingObject.cs" />
+    <Compile Include="Components\WaterPhysicsComponentCharacter.cs" />
+    <Compile Include="Components\WaterPhysicsComponentGrid.cs" />
+    <Compile Include="Components\WaterParachuteComponent.cs" />
+    <Compile Include="Components\WaterPhysicsComponentBase.cs" />
+    <Compile Include="Configs\BlockConfig.cs" />
+    <Compile Include="Configs\MaterialConfig.cs" />
+    <Compile Include="Configs\PlanetConfig.cs" />
+    <Compile Include="Configs\CharacterConfig.cs" />
+    <Compile Include="Configs\RespawnPodConfig.cs" />
+    <Compile Include="Configs\BaseConfig.cs" />
+    <Compile Include="Configs\WaterConfigAPI.cs" />
+    <Compile Include="Creatures\AnimatedPointBillboard.cs" />
     <Compile Include="Creatures\Seagull.cs" />
-    <Compile Include="Effects\Wake.cs" />
+    <Compile Include="Creatures\Fish.cs" />
+    <Compile Include="API\DragClientAPI.cs" />
+    <Compile Include="Creatures\AnimatedBillboard.cs" />
+    <Compile Include="Effects\SimulatedSplash.cs" />
+    <Compile Include="Effects\GodRay.cs" />
+    <Compile Include="TSSScripts\TSSBuoyancy.cs" />
+    <Compile Include="TSSScripts\TSSBuoyancyRatio.cs" />
+    <Compile Include="Utils\FastNoiseLite.cs" />
+    <Compile Include="API\HudAPIv2.cs" />
+    <Compile Include="Language.cs" />
+    <Compile Include="Effects\Splash.cs" />
+    <Compile Include="TSSScripts\TSSPressure.cs" />
     <Compile Include="Utils\PressurizationUtils.cs" />
+    <Compile Include="Utils\QuadBillboard.cs" />
     <Compile Include="Water.cs" />
-    <Compile Include="Components\WaterSolarComponent.cs" />
-    <Compile Include="TSSDepth.cs" />
+    <Compile Include="TSSScripts\TSSDepth.cs" />
     <Compile Include="Utils\Quadtree.cs" />
     <Compile Include="WaterData.cs" />
     <Compile Include="WaterFace.cs" />
@@ -71,6 +80,7 @@
     <Compile Include="WaterSettings.cs" />
     <Compile Include="Components\WaterCollectorComponent.cs" />
     <Compile Include="Utils\WaterUtils.cs" />
+    <Compile Include="WaterUIComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HavokWrapper">
