--- a/Water.csproj
+++ b/Water.csproj
@@ -42,6 +42,8 @@
     <Compile Include="API\WaterModAPIBackend.cs" />
     <Compile Include="API\WaterModAPI.cs" />
     <Compile Include="API\WeaponCoreApi.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="Components\WaterCommandComponent.cs" />
     <Compile Include="Components\WaterPhysicsComponentInventoryBag.cs" />
     <Compile Include="Components\WaterPhysicsComponentFloatingObject.cs" />
     <Compile Include="Components\WaterPhysicsComponentCharacter.cs" />
@@ -75,10 +77,12 @@
     <Compile Include="Water.cs" />
     <Compile Include="TSSScripts\TSSDepth.cs" />
     <Compile Include="Utils\Quadtree.cs" />
+    <Compile Include="WaterClientSettings.cs" />
     <Compile Include="WaterData.cs" />
     <Compile Include="WaterFace.cs" />
     <Compile Include="WaterLocalization.cs" />
     <Compile Include="Components\WaterModComponent.cs" />
+    <Compile Include="WaterSession.cs" />
     <Compile Include="WaterSettings.cs" />
     <Compile Include="Components\WaterCollectorComponent.cs" />
     <Compile Include="Utils\WaterUtils.cs" />
