--- a/Water.csproj
+++ b/Water.csproj
@@ -41,15 +41,25 @@
     <Compile Include="API\APIUsageExample.cs" />
     <Compile Include="API\WaterModAPIBackend.cs" />
     <Compile Include="API\WaterModAPI.cs" />
-    <Compile Include="API\WeaponCoreApi.cs" />
+    <Compile Include="BlockDamagePair.cs" />
     <Compile Include="Command.cs" />
-    <Compile Include="Components\WaterCommandComponent.cs" />
+    <Compile Include="SessionComponents\WaterConfigComponent.cs" />
+    <Compile Include="SessionComponents\WaterDescriptionComponent.cs" />
+    <Compile Include="SessionComponents\SessionComponentBase.cs" />
+    <Compile Include="SessionComponents\WaterRespawnPodComponent.cs" />
+    <Compile Include="SessionComponents\WaterSettingsComponent.cs" />
+    <Compile Include="SessionComponents\WaterEffectsComponent.cs" />
+    <Compile Include="SessionComponents\WaterManagerComponent.cs" />
+    <Compile Include="SessionComponents\WaterCommandComponent.cs" />
+    <Compile Include="Components\WaterCollectorComponent.cs" />
     <Compile Include="Components\WaterPhysicsComponentInventoryBag.cs" />
     <Compile Include="Components\WaterPhysicsComponentFloatingObject.cs" />
     <Compile Include="Components\WaterPhysicsComponentCharacter.cs" />
     <Compile Include="Components\WaterPhysicsComponentGrid.cs" />
     <Compile Include="Components\WaterParachuteComponent.cs" />
     <Compile Include="Components\WaterPhysicsComponentBase.cs" />
+    <Compile Include="SessionComponents\WaterRenderComponent.cs" />
+    <Compile Include="SessionComponents\WaterSoundComponent.cs" />
     <Compile Include="Configs\BlockConfig.cs" />
     <Compile Include="Configs\MaterialConfig.cs" />
     <Compile Include="Configs\PlanetConfig.cs" />
@@ -63,7 +73,6 @@
     <Compile Include="API\DragClientAPI.cs" />
     <Compile Include="Creatures\AnimatedBillboard.cs" />
     <Compile Include="Effects\SimulatedSplash.cs" />
-    <Compile Include="Effects\GodRay.cs" />
     <Compile Include="TSSScripts\TSSBuoyancy.cs" />
     <Compile Include="TSSScripts\TSSBuoyancyRatio.cs" />
     <Compile Include="Utils\FastNoiseLite.cs" />
@@ -71,22 +80,17 @@
     <Compile Include="Language.cs" />
     <Compile Include="Effects\Splash.cs" />
     <Compile Include="TSSScripts\TSSPressure.cs" />
-    <Compile Include="Utils\PressurizationUtils.cs" />
-    <Compile Include="Utils\QuadBillboard.cs" />
     <Compile Include="Utils\SphereTree.cs" />
     <Compile Include="Water.cs" />
     <Compile Include="TSSScripts\TSSDepth.cs" />
-    <Compile Include="Utils\Quadtree.cs" />
     <Compile Include="WaterClientSettings.cs" />
     <Compile Include="WaterData.cs" />
     <Compile Include="WaterFace.cs" />
     <Compile Include="WaterLocalization.cs" />
-    <Compile Include="Components\WaterModComponent.cs" />
-    <Compile Include="WaterSession.cs" />
+    <Compile Include="SessionComponents\WaterModComponent.cs" />
     <Compile Include="WaterSettings.cs" />
-    <Compile Include="Components\WaterCollectorComponent.cs" />
     <Compile Include="Utils\WaterUtils.cs" />
-    <Compile Include="Components\WaterUIComponent.cs" />
+    <Compile Include="SessionComponents\WaterUIComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HavokWrapper">
