--- a/Water.csproj
+++ b/Water.csproj
@@ -57,17 +57,19 @@
     <Compile Include="API\APIUsageExample.cs" />
     <Compile Include="API\RemoteDragSettings.cs" />
     <Compile Include="API\WaterModAPI.cs" />
+    <Compile Include="Components\EventWaterDepthComponent.cs" />
     <Compile Include="Components\WaterPhysicsComponentGrid2.cs" />
     <Compile Include="Components\WaterComponent.cs" />
     <Compile Include="Components\WaterRenderComponent.cs" />
+    <Compile Include="Components\ConsoleRenderComponent.cs" />
     <Compile Include="Configs\FishConfig.cs" />
     <Compile Include="SessionComponents\BackwardsCompatibilityComponent.cs" />
     <Compile Include="SessionComponents\WaterAPIComponent.cs" />
     <Compile Include="SessionComponents\WaterFishComponent.cs" />
     <Compile Include="SessionComponents\WaterModComponent.cs" />
     <Compile Include="SessionComponents\WaterSyncComponent.cs" />
-    <Compile Include="SessionComponents\XboxRenderComponent.cs" />
-    <Compile Include="SessionComponents\XboxCommandComponent.cs" />
+    <Compile Include="SessionComponents\ConsoleRenderSessionComponent.cs" />
+    <Compile Include="SessionComponents\ConsoleCommandComponent.cs" />
     <Compile Include="SessionComponents\BlockDamageComponent.cs" />
     <Compile Include="SessionComponents\WaterConfigComponent.cs" />
     <Compile Include="SessionComponents\WaterDescriptionComponent.cs" />
@@ -101,21 +103,25 @@
     <Compile Include="TSSScripts\TSSBuoyancy.cs" />
     <Compile Include="TSSScripts\TSSBuoyancyRatio.cs" />
     <Compile Include="Utils\Assert.cs" />
+    <Compile Include="Utils\Base6DirectionsExtensions.cs" />
     <Compile Include="Utils\FastNoiseLite.cs" />
     <Compile Include="API\HudAPIv2.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Effects\Splash.cs" />
     <Compile Include="TSSScripts\TSSPressure.cs" />
     <Compile Include="Utils\PressurizationUtils.cs" />
+    <Compile Include="Utils\QuadTree.cs" />
     <Compile Include="Utils\SerializableStringId.cs" />
     <Compile Include="TSSScripts\TSSDepth.cs" />
+    <Compile Include="Utils\SphereTree.cs" />
+    <Compile Include="Utils\Vector3Extensions.cs" />
     <Compile Include="WaterClientSettings.cs" />
     <Compile Include="WaterData.cs" />
     <Compile Include="WaterLocalization.cs" />
+    <Compile Include="WaterNode.cs" />
     <Compile Include="WaterSettings.cs" />
     <Compile Include="Utils\WaterUtils.cs" />
     <Compile Include="SessionComponents\WaterUIComponent.cs" />
-    <Compile Include="XboxRenderData.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HavokWrapper">
