--- a/Water.csproj
+++ b/Water.csproj
@@ -106,14 +106,17 @@
     <Compile Include="Utils\Base6DirectionsExtensions.cs" />
     <Compile Include="Utils\FastNoiseLite.cs" />
     <Compile Include="API\HudAPIv2.cs" />
+    <Compile Include="Utils\LODPair.cs" />
+    <Compile Include="Volumetrics\FloodFillSimulation.cs" />
+    <Compile Include="Volumetrics\IVolumetricSimulation.cs" />
     <Compile Include="WaterTexts.cs" />
     <Compile Include="Effects\Splash.cs" />
     <Compile Include="TSSScripts\TSSPressure.cs" />
     <Compile Include="Utils\PressurizationUtils.cs" />
-    <Compile Include="Utils\QuadTree.cs" />
+    <Compile Include="Volumetrics\WaterTreeNode.cs" />
     <Compile Include="Utils\SerializableStringId.cs" />
     <Compile Include="TSSScripts\TSSDepth.cs" />
-    <Compile Include="Utils\SphereTree.cs" />
+    <Compile Include="Volumetrics\WaterTree.cs" />
     <Compile Include="Utils\Vector3DExtensions.cs" />
     <Compile Include="WaterClientSettings.cs" />
     <Compile Include="WaterData.cs" />
