--- a/Water.csproj
+++ b/Water.csproj
@@ -48,6 +48,26 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>6.0</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>6.0</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
     <None Include="App.config" />
@@ -62,6 +82,7 @@
     <Compile Include="Components\WaterRenderComponent.cs" />
     <Compile Include="Components\ConsoleRenderComponent.cs" />
     <Compile Include="Configs\FishConfig.cs" />
+    <Compile Include="Effects\Wake.cs" />
     <Compile Include="SessionComponents\BackwardsCompatibilityComponent.cs" />
     <Compile Include="SessionComponents\WaterAPIComponent.cs" />
     <Compile Include="SessionComponents\WaterFishComponent.cs" />
@@ -95,7 +116,6 @@
     <Compile Include="Configs\BaseConfig.cs" />
     <Compile Include="Configs\WaterConfigAPI.cs" />
     <Compile Include="Creatures\AnimatedPointBillboard.cs" />
-    <Compile Include="Creatures\Seagull.cs" />
     <Compile Include="API\DragClientAPI.cs" />
     <Compile Include="Creatures\AnimatedBillboard.cs" />
     <Compile Include="Effects\SimulatedSplash.cs" />
@@ -106,6 +126,8 @@
     <Compile Include="Utils\FastNoiseLite.cs" />
     <Compile Include="API\HudAPIv2.cs" />
     <Compile Include="Utils\LODPair.cs" />
+    <Compile Include="Volumetrics\HeightFieldSimulation.cs" />
+    <Compile Include="Volumetrics\NaiveHeightFieldSimulation.cs" />
     <Compile Include="Volumetrics\FloodFillSimulation.cs" />
     <Compile Include="Volumetrics\IVolumetricSimulation.cs" />
     <Compile Include="WaterTexts.cs" />
@@ -119,7 +141,7 @@
     <Compile Include="Utils\Vector3DExtensions.cs" />
     <Compile Include="WaterClientSettings.cs" />
     <Compile Include="WaterData.cs" />
-    <Compile Include="WaterNode.cs" />
+    <Compile Include="Volumetrics\WaterNode.cs" />
     <Compile Include="WaterSettings.cs" />
     <Compile Include="Utils\WaterUtils.cs" />
     <Compile Include="SessionComponents\WaterUIComponent.cs" />
